[package]
name = "backend-ds"
version = "0.1.0"
edition = "2024"

[dependencies]
boa_engine = "0.21.0"
bytes = "1.10.1"
chrono = "0.4.44"
async-trait = "0.1.89"
futures = "0.3.32"
mongodb = "3.5.2"
once_cell = "1.21.4"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql", "sqlite", "chrono", "json"] }
rand = "0.10.0"
redis = { version = "0.32.7", features = ["tokio-comp"] }
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
salvo =  { version = "0.90.1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.149"
rmp-serde = "1.3.0"
socketioxide = { version = "0.18.2", features = ["tracing", "extensions", "state"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
time = "0.3.47"
tokio = {version = "1.50.0", features = ["full"]}
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = "1.22.0"
teloxide = { git = "https://github.com/teloxide/teloxide.git", features = ["macros","webhooks"] }
reqwest = "0.13.2"
dashmap = "6.1.0"
base64 = "0.22.1"
url = "2.5.8"
init-data-rust = "0.1.1"
urlencoding = "2.1.3"
lazy_static = "1.5.0"

aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
hex = "0.4.3"
md5 = { version = "0.10.6", package = "md-5" }
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "backend-ds"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

# cross build --release --target aarch64-unknown-linux-gnu
